<resources>
    <string name="app_name">Android Technical Test</string>

    <string name="pupil_detail_id">Id</string>
    <string name="pupil_detail_name">Name</string>
    <string name="pupil_detail_country">Country</string>
    <string name="sync">Sync</string>

    <string name="data_reset">Api Data Reset</string>
    <string name="data_reset_failed">Data Reset Failed</string>
    <string name="pupil_id_placeholder">ID: %1s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pupils">Pupils</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="pupil_details">Pupil Details</string>
    <string name="pupil_profile_picture">Pupil Profile Picture</string>
    <string name="full_name">Full Name</string>
    <string name="pupil_id">Pupil ID</string>
    <string name="parent_guardian_phone">Parent/Guardian Phone no</string>
    <string name="pupil_class">Pupil Class</string>
    <string name="address">Address</string>
    <string name="sample_address">No 123, New Globe Office, Ikeja, Lagos Nigeria</string>
    <string name="delete_record">Click to delete pupil record</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_new_pupil">Create New Pupil</string>
    <string name="edit_pupil_details">Edit Pupil Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="guardian_phone">Guardian Phone</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="submit">SUBMIT</string>
    <string name="capture_profile_picture">Capture Profile Picture</string>
    <string name="_10_years">10 years</string>
    <string name="age_place_holder">%1s years</string>
    <string name="image_capture_failed_retry">Image capture failed, kindly retry.</string>
    <string name="view_pupil_details">View pupil\'s details</string>
    <string name="go_back">Go back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_are_about_to_delete">You\'re about to delete records of %1s. This is an irreversible operation. \n Click `OK` to proceed</string>
    <string name="loader_image">Loader image</string>
    <string name="failed">Failed!</string>
    <string name="successful">Successful</string>
    <string name="sync_completed">Sync completed!</string>
    <string name="all_data_successfully_backed_up">All your data has been successfully backed up to the server.</string>
    <string name="_of_completed">%1s of %2s backed up to the server.</string>
    <string name="this_id_is_not_final">This ID is not final, and could be changed by the server</string>
</resources>
