<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.fragments.CreateOrEditPupilDetailsFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/edit_pupil_details" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="@dimen/dimen_90dp"
                    android:contentDescription="@null"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/profile_pic_bg"
                    tools:src="@drawable/boy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/capture_profile_picture_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:contentDescription="@string/capture_profile_picture"
                    android:src="@drawable/photo_camera_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                    app:layout_constraintStart_toEndOf="@+id/profile_picture" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pupil_id_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_picture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pupil_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/pupil_id" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pupil_id_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_tet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_tet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/last_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pupil_class_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_3dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pupil_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/pupil_class" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/guardian_phone_no_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginStart="@dimen/dimen_3dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/guardian_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/guardian_phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_3dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guardian_phone_no_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_tiet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/age" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginStart="@dimen/dimen_3dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/guardian_phone_no_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/country_tiet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/country" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_TIL"
                    style="@style/EditTextThemeOverlayLoginPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:helperTextTextAppearance="@style/HelperTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_tiet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="2"
                        android:hint="@string/address" />
                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_40dp"
                    android:text="@string/submit"
                    android:enabled="true"
                    android:background="@drawable/submit_btn_bg"
                    android:textColor="@color/toggle_text_color_with_state"
                    android:fontFamily="@font/poppins_bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_TIL" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>